opa-gatekeeper/labels/missing_labels/contraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-env-label
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod", "Namespace"]
  parameters:
    label: env
