opa-gatekeeper/labels/missing_labels/k8requiredLabels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:                         # ← fixed
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            label:
              type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels

      violation[{"msg": msg}] {
        required := input.parameters.label
        provided := input.review.object.metadata.labels
        not provided[required] 
        msg := sprintf("you must provide label: %v", [required])
      }
